fixed project links not showing up correctly

--- a/stylus/projects.styl
+++ b/stylus/projects.styl
@@ -124,7 +124,7 @@
         h1
           font-size 25px
 
-@media screen and (max-width 370px)
+@media screen and (max-width 415px)
   #project-section
     .project-container
       .child
